[metadata]
name = puppet-tripleo
summary = Puppet module for OpenStack TripleO
description-file =
    README.md
long_description_content_type = text/markdown
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
license = Apache License (2.0)
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
